Fixed an UI issue on mobile when the user is on landscape mode

--- a/src/style/sass/pages/_index.scss
+++ b/src/style/sass/pages/_index.scss
@@ -12,7 +12,7 @@
     z-index: 2;
 
     @include mobile-landscape-only {
-        min-height: 125dvh;
+        min-height: 150vh;
         gap: 35px;
     }
 
